Ajustes no código para a adição de categorias funcionar

--- a/Views/Categorias/Create.cshtml
+++ b/Views/Categorias/Create.cshtml
@@ -4,28 +4,18 @@
     ViewData["Title"] = "Criar Categoria";
 }
 
-<h1>Criar Nova Categoria</h1>
+<h1>Cadastrar Categoria</h1>
 
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        @* O asp-action="Create" garante que o POST será enviado para o método Create do Controller *@
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
-            <div class="form-group">
-                <label asp-for="nome" class="control-label"></label>
-                <input asp-for="nome" class="form-control" />
-                <span asp-validation-for="nome" class="text-danger"></span>
-            </div>
-            
-            <div class="form-group mt-3">
-                <input type="submit" value="Salvar" class="btn btn-success" />
-                <a asp-action="Index" class="btn btn-secondary">Voltar para a Lista</a>
-            </div>
-        </form>
+<form asp-action="Create" method="post">
+    <div class="form-group">
+        <label asp-for="nome" class="control-label"></label>
+        <input asp-for="nome" class="form-control" />
+        <span asp-validation-for="nome" class="text-danger"></span>
     </div>
-</div>
+
+    <button type="submit" class="btn btn-primary mt-3">Salvar</button>
+    <a asp-action="Index" class="btn btn-secondary mt-3">Voltar</a>
+</form>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
