Ajustes nas telas de login, cadastro de usuário e menu, bem como desenvolvimento da tela de cadastro de produto

--- a/Views/Home/Menu.cshtml
+++ b/Views/Home/Menu.cshtml
@@ -52,8 +52,8 @@
 
 <!-- Rodapé -->
 <div class="menu-footer">
-    <a href="/Usuarios/Login" class="footer-btn">⬅ VOLTAR</a>
-    <a href="/Home/Index" class="footer-btn">SAIR ➜</a>
+    <a href="/Usuarios/Login" class="footer-btn">&#8678 VOLTAR</a>
+    <a href="/Home/Index" class="footer-btn">SAIR &#8680</a>
 </div>
 
 </body>
