--- a/Views/Usuarios/Cadastro.cshtml
+++ b/Views/Usuarios/Cadastro.cshtml
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - PapelArt</title>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="~/css/layout.css" />
     <link rel="stylesheet" href="~/css/login-cadastro.css" />
 </head>
 <body>
@@ -39,8 +40,8 @@
                 </div>
             }
             <form asp-action="Cadastrar" method="post">
-                <label for="nome">Nome</label>
-                <input type="text" id="nome" name="nome" required />
+                <label class="user-form" for="nome">Nome</label>
+                <input class="user-form" type="text" id="nome" name="nome" required />
 
                 <label for="email">E-mail</label>
                 <input type="email" id="email" name="email" required />
