Desenvolvimento das telas de cadastro de categoria, listagem de categorias e consulta de estoque, ajustes em alguns detalhes necessários, nas conexões e testes

--- a/Views/Home/Menu.cshtml
+++ b/Views/Home/Menu.cshtml
@@ -37,7 +37,7 @@
 
         <a href="/Produtos/Create" class="menu-btn">CADASTRAR<br/>PRODUTO</a>
 
-        <a href="/Produtos" class="menu-btn">CONSULTAR<br/>ESTOQUE</a>
+        <a href="/Estoque/Index" class="menu-btn">CONSULTAR<br/>ESTOQUE</a>
 
         <a href="/Movimentacoes/Create" class="menu-btn">
             REGISTRAR<br/>ENTRADA/SAÍDA
@@ -50,11 +50,11 @@
     </div>
 </div>
 
-<!-- Rodapé -->
-<div class="menu-footer">
-    <a href="/Usuarios/Login" class="footer-btn">&#8678 VOLTAR</a>
-    <a href="/Home/Index" class="footer-btn">SAIR &#8680</a>
-</div>
+    <!-- RODAPÉ Fixo -->
+    <footer class="menu-footer">
+        <a href="javascript:history.back()" class="footer-btn">&#8678 VOLTAR</a>
+        <a href="/Home/Index" class="footer-btn">SAIR &#8680</a>
+    </footer>
 
 </body>
 </html>
